# horaedb-client-rs

./: .asf.yaml  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  DEPENDENCIES.tsv  Makefile  NOTICE  README.md  licenserc.toml  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yml  release.yml
etc/: license.template
examples/: read_write.rs
src/: client.rs  config.rs  errors.rs  lib.rs  options.rs  route_client.rs  router.rs  rpc_client.rs  util.rs
src/db_client/: builder.rs  cluster.rs  direct.rs  inner.rs  mod.rs  raw.rs  result.rs  route_based.rs  standalone.rs
src/model/: convert.rs  display.rs  mod.rs  request.rs  route.rs  row.rs  value.rs
src/model/sql_query/: display.rs  mod.rs  request.rs  response.rs  row.rs
src/model/write/: mod.rs  point.rs  request.rs  response.rs
src/rpc_client/: grpc_client.rs  mock_rpc_client.rs  mod.rs  rpc_client_impl.rs
