[package]
name = "horaedb-client"
version = "1.0.2"
authors = ["HoraeDB Authors <ceresdbservice@gmail.com>"]
edition = "2021"
repository = "https://github.com/CeresDB/horaedb-client-rs"
license = "Apache-2.0"
description = "Rust implementation of HoraeDB client."
readme = "README.md"

[dependencies]
arrow = "38.0.0"
async-trait = "0.1.57"
ceresdbproto = "1.0.4"
dashmap = "5.3.4"
futures = "0.3"
paste = "1.0"
thiserror = "1.0.38"
tokio = "1.15"
tonic = "0.8.1"
zstd = { version = "0.12", default-features = false }

[dev-dependencies]
chrono = "0.4"
tokio = { version = "1.15", features = ["full"] }

[lib]
name = "horaedb_client"
