# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "horaedb-client"
version = "2.0.0"
authors = ["HoraeDB Authors"]
edition = "2021"
repository = "https://github.com/apache/incubator-horaedb-client-rs"
license = "Apache-2.0"
description = "Apache HoraeDB (Incubating) Rust Client."
readme = "README.md"

[dependencies]
anyhow = "1.0.83"
arrow = "38.0.0"
async-trait = "0.1.72"
base64 = "0.22.1"
dashmap = "5.3.4"
futures = "0.3"
horaedbproto = "1.0.23"
paste = "1.0"
thiserror = "1.0.38"
tokio = "1.29"
tonic = "0.8.1"
zstd = { version = "0.12", default-features = false }

[dev-dependencies]
chrono = "0.4"
tokio = { version = "1.15", features = ["full"] }

[lib]
name = "horaedb_client"
